<resources>
    <string name="app_name">InteligentBuilding</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="lightning">Oświetlenie</string>
    <string name="rooms">Pokoje</string>
    <string name="floors">Piętra</string>
    <string name="temperature">Temperatura</string>
    <string name="settings">Ustawienia</string>
    <string name="title_activity_lights">LightsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="bedroom_1">Sypialnia 1</string>
    <string name="bedroom_2">Sypialnia 2</string>
    <string name="Bathroom_1">Łazienka 1</string>
    <string name="Bathroom_2">Łazienka 2</string>
    <string name="kitchen">Kuchnia</string>
    <string name="living_room">Salon</string>
    <string name="bedroom">Sypialnia</string>
    <string name="light">Światło</string>
    <string name="light_1">Światło 1</string>
    <string name="light_2">Światło 2</string>
    <string name="socket">Gniazdko</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ground_floor">parter</string>
    <string name="floor">pietro</string>

    <string name="turnOn">WŁĄCZ</string>
    <string name="turnOff">WYŁĄCZ</string>

    <string name="opcua">opcua</string>
    <string name="hintIP">Ex. 192.168.1.3:51210</string>
    <string name="connect">Połącz się</string>
    <string name="OPCTopMessage">Wpisz OPC UA Server Address</string>
    <string name="list_endpoint">Lista Endpointów</string>
    <string name="Add_Action">Dodaj akcje</string>
    <string name="edit_actions">Edytuj akcje</string>

    <string name="lights">Światła</string>
    <string name="sockets">Gniazdka</string>
    <string name="sensors">Czujniki</string>
    <string name="sensor">Czujnik</string>
    <string name="sunblinds">Żaluzje</string>
    <string name="sunblind">Żaluzja</string>
    <string name="gate">Brama</string>
    <string name="chooseHour">Wybierz godzine</string>
    <string name="Add">Dodaj</string>
    <string name="Actions">Akcje</string>
    <string name="triggerFunction">TriggerFunction</string>
    <string name="functionParam">functionParam</string>
    <string name="actionFunction">actionFunction</string>
    <string name="actionParam">actionParam</string>
    <string name="save_and_quit">Zapisz i wyjdź</string>


    <string-array name="deviceType">
        <item>Światła</item>
        <item>Gniazdka</item>
        <item>Czujniki</item>
        <item>Żaluzje</item>
        <item>Brama</item>
    </string-array>

    <string-array name="lights">
        <item>Gabinet</item>
        <item>Schody</item>
        <item>Kotłownia</item>
        <item>Gabinet nocne</item>
        <item>Garaż</item>
        <item>Łazienka parter</item>
        <item>Kuchnia</item>
        <item>Salon 1</item>
        <item>Salon 2</item>
        <item>Salon 3</item>
        <item>TV</item>
    </string-array>

    <string-array name="sockets">
        <item>Salon </item>
        <item>Kuchnia</item>
    </string-array>

    <string-array name="sensors">
        <item>Salon </item>
        <item>Kuchnia</item>
    </string-array>

    <string-array name="sunblinds">
        <item>Salon </item>
        <item>Kuchnia</item>
    </string-array>

    <string-array name="gate">
        <item>Brama Garażowa </item>
    </string-array>

    <string-array name="triggerFunctions">
        <item></item>
        <item>OnTime</item>
        <item>OnSunRise</item>
        <item>OnSunSet</item>
    </string-array>

    <string-array name="actionFunction">
        <item></item>
        <item>Turn On</item>
        <item>Turn Off</item>
    </string-array>

    <string-array name="actionParam">
        <item></item>
        <item>Param 1</item>
        <item>Param 2</item>
    </string-array>

</resources>