<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="2">

        <ImageView
            android:id="@+id/deviceStatus"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_light_off"
            android:tag="light" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/turnOnButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:backgroundTint="@color/white"
            android:onClick="handleTurnOn"
            android:text="@string/turnOn"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/turnOffButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:backgroundTint="@color/white"
            android:onClick="handleTurnOff"
            android:text="@string/turnOff"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="2"
        android:orientation="vertical">

            <Button
                android:id="@+id/editActions"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:onClick="handleEditAction"
                android:text="@string/edit_actions"
                android:textColor="@color/black" />



        <ListView
            android:id="@+id/actions"
            android:layout_width="wrap_content"
            android:layout_height="200dp" />

    </LinearLayout>


</LinearLayout>