<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RoomActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/main_toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <GridLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="10"
                    android:alignmentMode="alignMargins"
                    android:columnCount="1"
                    android:rowCount="3">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_rowWeight="2"
                        android:layout_columnWeight="1"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:clickable="true"
                        android:focusable="true"

                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:padding="10dp">

                                <Button
                                    android:id="@+id/bed_room_button_collapse"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:backgroundTint="@color/white"
                                    android:outlineProvider="none"
                                    android:text="@string/bedroom"
                                    android:textColor="@color/black"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />

                                <com.google.android.material.switchmaterial.SwitchMaterial
                                    android:id="@+id/lightning"
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/bed_room_layout"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:visibility="gone">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:padding="10dp">

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:src="@drawable/main_menu_lightning" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/light_1"
                                        android:textColor="@color/black"
                                        android:textSize="16sp" />

                                    <com.google.android.material.switchmaterial.SwitchMaterial
                                        android:id="@+id/kitchen"
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:padding="10dp">

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:src="@drawable/main_menu_lightning" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/light_2"
                                        android:textColor="@color/black"
                                        android:textSize="16sp" />

                                    <com.google.android.material.switchmaterial.SwitchMaterial
                                        android:id="@+id/living_room"
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:padding="10dp">

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:src="@drawable/socket" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/socket"
                                        android:textColor="@color/black"
                                        android:textSize="16sp" />

                                    <com.google.android.material.switchmaterial.SwitchMaterial
                                        android:id="@+id/bed_room"
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp" />
                                </LinearLayout>
                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_rowWeight="2"
                        android:layout_columnWeight="1"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:clickable="true"
                        android:focusable="true"

                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:padding="10dp">

                                <Button
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:backgroundTint="@color/white"
                                    android:outlineProvider="none"
                                    android:text="@string/kitchen"
                                    android:textColor="@color/black"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />

                                <com.google.android.material.switchmaterial.SwitchMaterial
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:visibility="gone">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:padding="10dp">

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:src="@drawable/light_bulb" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/light_1"
                                        android:textColor="@color/black"
                                        android:textSize="16sp" />

                                    <com.google.android.material.switchmaterial.SwitchMaterial
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:padding="10dp">

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:src="@drawable/light_bulb" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/light_2"
                                        android:textColor="@color/black"
                                        android:textSize="16sp" />

                                    <com.google.android.material.switchmaterial.SwitchMaterial
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:padding="10dp">

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:src="@drawable/light_bulb" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/socket"
                                        android:textColor="@color/black"
                                        android:textSize="16sp" />

                                    <com.google.android.material.switchmaterial.SwitchMaterial
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp" />
                                </LinearLayout>
                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </GridLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white">

        <include layout="@layout/main_nav_drawer" />

    </RelativeLayout>


</androidx.drawerlayout.widget.DrawerLayout>